<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cider Kit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="startingSGLabel">Starting SG</string>
    <string name="targetSGLabel">Target SG</string>
    <string name="volumeLabelMetric">Volume (L)</string>
    <string name="volumeLabelImperial">Volume (pints)</string>
    <string name="addSugarLabelMetric">Add Sugar (kg)</string>
    <string name="addSugarLabelImperial">Add Sugar (lb)</string>
    <string name="volumeValue"></string>
    <string name="defaultText">Enter value</string>
    <string name="noText"></string>
    <string name="completeValues">All values must be entered</string>
    <string name="enterValueHint">Enter Value</string>
    <string name="metricRadio">Metric</string>
    <string name="imperialRadio">Imperial</string>
    <string name="title_activity_start">Choose task</string>
    <string name="title_activity_sugar">Calculate Sugar Required</string>
    <string name="title_activity_sgto_alc">Specific Gravity to Alcohol</string>
    <string name="OGLabel">Original SG</string>
    <string name="TGLabel">Target SG</string>
    <string name="AlcLabel">% Alcohol</string>
    <string name="AlcPercent">% Alcohol</string>
    <string name="alc_help_text">Enter your starting specific gravity (SG when fermentation starts) into the SG field.  Enter the target specific gravity (eg 1.00) into the TG field. The resulting alcohol content is then calculated.</string>
    <string name="sugar_help_text">To calculate sugar required to achieve your desired Specific Gravity (pre-fermentation), Measure current SG, then provide target SG and volume of juice.</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Tab titles -->
    <string name="tab_add_sugar">Sugar Calculator</string>
    <string name="tab_sg_to_alcohol">Alcohol Calculator</string>

</resources>
