<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
	android:background="#cC58774b" android:orientation="vertical"
	android:layout_alignParentTop="true" 
	android:layout_width="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:layout_margin="0dp" android:layout_height="fill_parent">


		<TextView android:id="@+id/helpText" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_alignParentTop="true"
			android:background="#cC58774b" android:layout_alignRight="@+id/row1Container"
			android:textColor="#FFFFFF" android:paddingLeft="5dp"
			android:paddingRight="5dp" android:paddingTop="12dp"
			android:paddingBottom="12dp" android:ems="10" android:text="@string/sugar_help_text" />

		<LinearLayout android:id="@+id/row1Container"
			android:paddingLeft="5dp" android:paddingRight="5dp"
			android:background="#9C58774b" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dp"
			android:layout_below="@+id/helpText">

			<TextView android:id="@+id/startingSGLabel"
				android:labelFor="@+id/OGValue" android:textColor="#FFFFFF"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/OGLabel" />
			<EditText android:id="@+id/startingSGValue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20dp" android:ems="10" android:inputType="text" />
		</LinearLayout>

		<LinearLayout android:id="@+id/row2Container"
			android:paddingLeft="5dp" android:paddingRight="5dp"
			android:background="#cC58774b" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dp"
			android:layout_below="@+id/row1Container">

			<TextView android:id="@+id/targetSGLabel" android:labelFor="@+id/OGValue"
				android:textColor="#FFFFFF" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/targetSGLabel" />
			<EditText android:id="@+id/targetSGValue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20dp" android:ems="10" android:inputType="text" />
		</LinearLayout>

		<LinearLayout android:id="@+id/row3Container"
			android:paddingLeft="5dp" android:paddingRight="5dp"
			android:background="#cC58774b" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="10dp"
			android:layout_below="@+id/row2Container">
			<TextView android:id="@+id/volumeLabel" android:labelFor="@+id/volumeValue"
				android:textColor="#FFFFFF" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/volumeLabelMetric" />
			<EditText android:id="@+id/volumeValue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20dp" android:ems="10" android:inputType="text" />
		</LinearLayout>

		<LinearLayout android:id="@+id/row4Container"
			android:paddingLeft="5dp" android:paddingRight="5dp"
			android:background="#cC58774b" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginTop="10dp"
			android:layout_below="@+id/row3Container">

			<TextView android:id="@+id/addSugarLabel" android:labelFor="@+id/addSugarValue"
				android:textColor="#FFFFFF" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/addSugarLabelMetric" />
			<EditText android:id="@+id/addSugarValue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="20dp" android:ems="10" android:inputType="text" />

		</LinearLayout>
		<RadioGroup android:id="@+id/radioGroup1"
			android:background="#cC58774b" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/row4Container"
			android:layout_below="@+id/row4Container" android:layout_marginTop="15dp"
			android:orientation="vertical">
			<RadioButton android:id="@+id/radioMetric"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="10dp" 
				android:onClick="onRadioButtonClicked"
				android:text="@string/metricRadio" />
			<RadioButton android:id="@+id/radioImperial"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:onClick="onRadioButtonClicked"
				 android:text="@string/imperialRadio" />
		</RadioGroup>
	</RelativeLayout>